@@ -3,6 +3,8 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
           - fix use of [Test::CheckBreaks] in dist.ini of minted dists
           - add mailing list and irc metadata for minted Test distribution
+          - now passing along any payload for [Git::NextVersion] to the
+            replacement used by [RewriteVersion::Transitional]
 
 0.087     2015-02-20 02:47:43Z
           - now requiring a more conservative minimum version for
